--- a/src/Makefile
+++ b/src/Makefile
@@ -5,6 +5,7 @@ LDFLAGS += -lboost_program_options \
            -lboost_system \
 		   -ltemplog
 OBJ = $(CURDIR)/main.o \
+      $(CURDIR)/list_skeletons.o \
       $(CURDIR)/skeleton.o
 DEPS = $(OBJ:.o=.d)
 
