--- a/src/Makefile
+++ b/src/Makefile
@@ -6,6 +6,7 @@ LDFLAGS += -lboost_program_options \
 		   -ltemplog
 OBJ = $(CURDIR)/main.o \
       $(CURDIR)/list_skeletons.o \
+      $(CURDIR)/personalize_skeleton.o \
       $(CURDIR)/skeleton.o
 DEPS = $(OBJ:.o=.d)
 
