define BOOST_SPIRIT_DEBUG in debug

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,9 @@
 include $(ROOTDIR)/src/common.mk
 
+ifdef DEBUG
+  MACROS += BOOST_SPIRIT_DEBUG
+endif
+
 LDFLAGS += -lboost_program_options \
            -lboost_filesystem \
            -lboost_system \
