--- a/dot_skel/.skel/c++/skeleton/src/Makefile
+++ b/dot_skel/.skel/c++/skeleton/src/Makefile
@@ -22,7 +22,7 @@ distclean: clean
 	rm -f $(PRODUCT)
 
 %.dep: %.cc
-	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -MF"$@" -MG -MM -MP -MT"$@" -MT"$(<:.cc=.o)" "$<"
+	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -MG -MM -MP -MT"$@" -MT"$(<:.cc=.o)" "$<" >"$@"
 
 ifneq "$(MAKECMDGOALS)" "clean"
 ifneq "$(MAKECMDGOALS)" "distclean"
