--- a/dot_skel/.skel/c++/skeleton/test/Makefile
+++ b/dot_skel/.skel/c++/skeleton/test/Makefile
@@ -4,30 +4,28 @@ export PRODUCT = test_{APPNAME}
 OBJ := $(CURDIR)/main.o
 DEPS := $(OBJ:.o=.dep)
 
-.PHONY: check clean distclean tests
+.PHONY: clean distclean
 
 # see the comment of the $(PRODUCT) rule of the root makefile
 $(PRODUCT): $(OBJ)
 	$(LINK.cc) $(OUTPUT_OPTION) $^
 
-check: tests
-	./$(PRODUCT)
+check: $(PRODUCT)
+	./$(PRODUCT) && touch check
 
 all: check
 
 clean:
-	rm -f $(OBJ) $(DEPS)
+	rm -f $(OBJ) $(DEPS) check
 
 distclean: clean
 	rm -f $(PRODUCT)
 
 %.dep: %.cc
-	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -MF"$@" -MG -MM -MP -MT"$@" -MT"$(<:.cc=.o)" "$<"
+	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -MG -MM -MP -MT"$@" -MT"$(<:.cc=.o)" "$<" >"$@"
 
 ifneq "$(MAKECMDGOALS)" "clean"
 ifneq "$(MAKECMDGOALS)" "distclean"
   -include $(DEPS)
 endif
 endif
-
-tests: $(PRODUCT)
