--- a/dot_skel/.skel/c++/skeleton/Makefile
+++ b/dot_skel/.skel/c++/skeleton/Makefile
@@ -1,40 +1,46 @@
 export PROJECT := {APPNAME}
+export EXE := $(PROJECT)
+export LIB := lib$(PROJECT).a
 export VERSION := {VERSION}
 export ROOTDIR := $(realpath $(CURDIR))
 
 include $(ROOTDIR)/conf.mk
 
-.PHONY: $(PROJECT) all clean distclean check install uninstall dist help
+.PHONY: all clean distclean check install uninstall dist help
 
-check: $(PROJECT)
-	${MAKE} --directory $(ROOTDIR)/test check
+check: $(LIB)
+	$\{MAKE\} --directory $(ROOTDIR)/test check
 
-$(PROJECT):
-	${MAKE} --directory $(ROOTDIR)/src
+$(EXE):
+	$\{MAKE\} --directory $(ROOTDIR)/src $(EXE)
+
+$(LIB):
+	$\{MAKE\} --directory $(ROOTDIR)/src $(LIB)
 
 all:
-	${MAKE} --directory $(ROOTDIR)/src all
-	${MAKE} --directory $(ROOTDIR)/test all
+	$\{MAKE\} --directory $(ROOTDIR)/src all
+	$\{MAKE\} --directory $(ROOTDIR)/test all
 
 clean:
-	${MAKE} --directory $(ROOTDIR)/test clean
-	${MAKE} --directory $(ROOTDIR)/src clean
+	$\{MAKE\} --directory $(ROOTDIR)/test clean
+	$\{MAKE\} --directory $(ROOTDIR)/src clean
 
 distclean:
-	${MAKE} --directory $(ROOTDIR)/test distclean
-	${MAKE} --directory $(ROOTDIR)/src distclean
+	$\{MAKE\} --directory $(ROOTDIR)/test distclean
+	$\{MAKE\} --directory $(ROOTDIR)/src distclean
 	rm -f $(PROJECT)_$(VERSION).tar.gz
 
 install:
-	${MAKE} --directory $(ROOTDIR)/src install
+	$\{MAKE\} --directory $(ROOTDIR)/src install
 
 uninstall:
-	${MAKE} --directory $(ROOTDIR)/src uninstall
+	$\{MAKE\} --directory $(ROOTDIR)/src uninstall
 
 help:
 	@echo " AVAILABLE TARGETS:"
 	@echo
-	@echo "$(PROJECT)"
+	@echo "$(EXE)"
+	@echo "$(LIB)"
 	@echo "all                    "
 	@echo "dist                   "
 	@echo "check         (default)"
