--- a/dot_skel/.skel/c++/skeleton/src/Makefile
+++ b/dot_skel/.skel/c++/skeleton/src/Makefile
@@ -1,28 +1,31 @@
 include $(ROOTDIR)/src/conf.$(CXX).mk
 
-# if it's a static library we compile we might override PRODUCT:
-# export PRODUCT = lib{APPNAME}.a
-PRODUCT := $(PROJECT)
-HDR :=
-SRC :=
-OBJ := $(foreach O,$(SRC:.cc=.o),$(CURDIR)/$(notdir $(O)))
-DEP := $(OBJ:.o=.dep)
+EXE := $(PROJECT)
+LIB := lib$(PROJECT).a
+# PRODUCT = $(LIB)
+PRODUCT := $(EXE)
 MAINSRC := main.cc
+LIBHDR :=
+LIBSRC := perform.cc
+
 MAINOBJ := $(CURDIR)/$(notdir $(MAINSRC:.cc=.o))
-LDFLAGS += -L. -l$(PROJECT)
+MAINDEP := $(MAINOBJ:.o=.dep)
+LIBOBJ := $(foreach O,$(LIBSRC:.cc=.o),$(CURDIR)/$(notdir $(O)))
+LIBDEP := $(LIBOBJ:.o=.dep)
+LDFLAGS += -L. -l$(EXE)
 
 .PHONY: all clean distclean install uninstall
 
-$(PRODUCT): lib$(PROJECT).a $(MAINOBJ)
+$(EXE): $(LIB) $(MAINOBJ)
 	$(LINK.cc) $(OUTPUT_OPTION) $(MAINOBJ)
 
-lib$(PROJECT).a: $(filter-out $(MAINOBJ),$(OBJ))
+$(LIB): $(LIBOBJ)
 	ar rcs $@ $^
 
 all: $(PRODUCT)
 
 clean:
-	rm -f $(OBJ) $(DEP) gmon.out
+	rm -f $(MAINOBJ) $(LIBOBJ) $(MAINDEP) $(LIBDEP) gmon.out
 
 distclean: clean
 	rm -f $(PRODUCT)
@@ -33,7 +36,7 @@ distclean: clean
 ifneq "$(MAKECMDGOALS)" "clean"
   ifneq "$(MAKECMDGOALS)" "distclean"
     ifneq "$(MAKECMDGOALS)" "uninstall"
-      -include $(DEP)
+      -include $(LIBDEP) $(MAINDEP)
     endif
   endif
 endif
@@ -41,14 +44,14 @@ endif
 install: all
 	mkdir --parents $(PREFIX)/bin/
 	$(INSTALL) $(INSTALLFLAGS) $(PRODUCT) $(PREFIX)/bin/$(PRODUCT)
-	@# mkdir --parents $(PREFIX)/lib/ $(PREFIX)/include/{APPNAME}/
-	@# $(INSTALL) $(INSTALLFLAGS) lib$(PROJECT).a $(PREFIX)/lib/lib$(PROJECT).a
-	@# $(INSTALL) $(INSTALLFLAGS) $(HDR) $(PREFIX)/include/{APPNAME}/
+	@# mkdir --parents $(PREFIX)/lib/ $(PREFIX)/include/$(PROJECT)/
+	@# $(INSTALL) $(INSTALLFLAGS) $(LIB) $(PREFIX)/lib/$(LIB)
+	@# $(INSTALL) $(INSTALLFLAGS) $(LIBHDR) $(PREFIX)/include/$(PROJECT)/
 
 uninstall:
 	rm -f $(PREFIX)/bin/$(PRODUCT)
 	rmdir --parents --ignore-fail-on-non-empty $(PREFIX)/bin/
-	@# rm -f $(PREFIX)/lib/lib$(PROJECT).a
+	@# rm -f $(PREFIX)/lib/$(LIB)
 	@# rmdir --parents --ignore-fail-on-non-empty $(PREFIX)/lib/
-	@# rm -f $(foreach H,$(HDR),$(PREFIX)/include/{APPNAME}/$(H))
-	@# rmdir --parents --ignore-fail-on-non-empty $(PREFIX)/include/{APPNAME}/
+	@# rm -f $(foreach H,$(LIBHDR),$(PREFIX)/include/$(PROJECT)/$(H))
+	@# rmdir --parents --ignore-fail-on-non-empty $(PREFIX)/include/$(PROJECT)/
