dot_skel c++ default target is all
we can run the tests with check. running check ought to then be fast in
that it only needs to run the tests; the tests are already made by all.

--- a/dot_skel/c++/test/Makefile
+++ b/dot_skel/c++/test/Makefile
@@ -23,7 +23,7 @@ $(PRODUCT): ../src/lib$(PROJECT).a $(OBJ) $(MAINOBJ)
 check: $(PRODUCT)
 	./$(PRODUCT)
 
-all: check
+all: $(PRODUCT)
 
 clean:
 	rm -f $(MAINOBJ) $(OBJ) $(MAINDEP) $(DEP)
