--- a/dot_skel/c++lib/Makefile
+++ b/dot_skel/c++lib/Makefile
@@ -7,15 +7,15 @@ include $(ROOTDIR)/conf.mk
 
 .PHONY: all clean distclean check install uninstall dist help
 
+all:
+	$\{MAKE\} --directory $(ROOTDIR)/src all
+	$\{MAKE\} --directory $(ROOTDIR)/test all
+
 check: $(LIB)
 	$\{MAKE\} --directory $(ROOTDIR)/test check
 
 $(LIB):
 	$\{MAKE\} --directory $(ROOTDIR)/src $(LIB)
-
-all:
-	$\{MAKE\} --directory $(ROOTDIR)/src all
-	$\{MAKE\} --directory $(ROOTDIR)/test all
 
 clean:
 	$\{MAKE\} --directory $(ROOTDIR)/test clean
@@ -35,9 +35,9 @@ uninstall:
 help:
 	@echo " AVAILABLE TARGETS:"
 	@echo
-	@echo "all                    "
+	@echo "all           (default)"
 	@echo "dist                   "
-	@echo "check         (default)"
+	@echo "check                  "
 	@echo "install                "
 	@echo "uninstall              "
 	@echo "clean                  "
