dot skel: compute version from git

--- a/dot_skel/c++/Makefile
+++ b/dot_skel/c++/Makefile
@@ -1,7 +1,7 @@
 export PROJECT := {APPNAME}
 export EXE := $(PROJECT)
 export LIB := lib$(PROJECT).a
-export VERSION := {VERSION}
+export VERSION := $(shell git describe --dirty --always 2>/dev/null || echo 0)
 export ROOTDIR := $(realpath $(CURDIR))
 
 include $(ROOTDIR)/conf.mk
