--- a/dot_skel/c++lib/Makefile
+++ b/dot_skel/c++lib/Makefile
@@ -1,6 +1,6 @@
 export PROJECT := {APPNAME}
 export LIB := lib$(PROJECT).a
-export VERSION := {VERSION}
+export VERSION := $(shell git describe --dirty --always 2>/dev/null || echo 0)
 export ROOTDIR := $(realpath $(CURDIR))
 
 include $(ROOTDIR)/conf.mk
