c++hh skeleton: there is no library to link with

--- a/dot_skel/c++hh/test/Makefile
+++ b/dot_skel/c++hh/test/Makefile
@@ -4,7 +4,7 @@ PRODUCT = test_$(PROJECT)
 HDR :=
 SRC :=
 LDDIR :=
-LDLIB := $(PROJECT)
+LDLIB :=
 
 MAINSRC := main.cc
 MAINOBJ := $(CURDIR)/$(notdir $(MAINSRC:.cc=.o))
