c++hh skeleton: default build product

--- a/dot_skel/c++hh/test/Makefile
+++ b/dot_skel/c++hh/test/Makefile
@@ -16,13 +16,13 @@ LDFLAGS += $(foreach D,$(LDDIR),-L$D) \\
 
 .PHONY: check clean distclean
 
+all: $(PRODUCT)
+
 $(PRODUCT): $(OBJ) $(MAINOBJ)
 	$(LINK.cc) $(OUTPUT_OPTION) $^
 
 check: $(PRODUCT)
 	./$(PRODUCT)
-
-all: check
 
 clean:
 	rm -f $(MAINOBJ) $(OBJ) $(MAINDEP) $(DEP)
