.skel c++: utilize INSTALL_* macros

--- a/dot_skel/c++/src/Makefile
+++ b/dot_skel/c++/src/Makefile
@@ -45,7 +45,7 @@ endif
 
 install: all
 	mkdir --parents $(PREFIX)/bin/
-	$(INSTALL) $(INSTALLFLAGS) $(PRODUCT) $(PREFIX)/bin/$(PRODUCT)
+	$(INSTALL_EXECUTABLE) $(PRODUCT) $(PREFIX)/bin/$(PRODUCT)
 
 uninstall:
 	rm -f $(PREFIX)/bin/$(PRODUCT)
