.skel c++ac: check runs unit tests

--- a/dot_skel/c++ac/test/Makefile.am
+++ b/dot_skel/c++ac/test/Makefile.am
@@ -3,3 +3,6 @@ check_{APPNAME}_SOURCES = main.cc
 check_{APPNAME}_CPPFLAGS = -I../include
 check_{APPNAME}_LDADD = ../src/lib{APPNAME}.a
 AM_CXXFLAGS = -std=c++11
+
+check: check-am
+	./$(check_PROGRAMS)
