migrate from plain Makefiles to auto{conf,make}

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,22 @@
-*.o
+.*.sw[op]
 *.a
-*.dep
+*.o
+.deps/
+Makefile
+Makefile.in
+aclocal.m4
+ar-lib
+autom4te.cache/
+compile
+config.cache
+config.h
+config.h.in
+config.log
+config.status
+configure
+depcomp
+install-sh
+missing
 src/skel
-test/test_skel
+stamp-h1
+test/check_skel
