c++ac: s/lib{APPNANE}.a/-l{APPNAME}/

--- a/dot_skel/c++ac/src/Makefile.am
+++ b/dot_skel/c++ac/src/Makefile.am
@@ -1,7 +1,8 @@
 bin_PROGRAMS = {APPNAME}
 {APPNAME}_SOURCES = main.cc
 {APPNAME}_CPPFLAGS = -I../include
-{APPNAME}_LDADD = lib{APPNAME}.a
+{APPNAME}_LDADD = -L. \\
+                  -l{APPNAME}
 AM_CXXFLAGS = -std=c++11
 
 noinst_LIBRARIES = lib{APPNAME}.a
