--- a/dot_skel/c++ac/test/Makefile.am
+++ b/dot_skel/c++ac/test/Makefile.am
@@ -1,7 +1,8 @@
 check_PROGRAMS = check_{APPNAME}
 check_{APPNAME}_SOURCES = dummy.cc main.cc
 check_{APPNAME}_CPPFLAGS = -I../include
-check_{APPNAME}_LDADD = ../src/lib{APPNAME}.a
+check_{APPNAME}_LDADD = -L../src \\
+                        -l{APPNAME}
 AM_CXXFLAGS = -std=c++11
 
 check: check-am
