--- a/dot_skel/c++ac/configure.ac
+++ b/dot_skel/c++ac/configure.ac
@@ -3,6 +3,6 @@ AM_INIT_AUTOMAKE([foreign -Wall -Werror])
 AC_PROG_CXX
 AC_PROG_RANLIB
 AM_PROG_AR
-AC_CONFIG_HEADERS([config.h])
+AC_CONFIG_HEADERS([src/config.h])
 AC_CONFIG_FILES([Makefile src/Makefile test/Makefile])
 AC_OUTPUT
