configure.ac: v0.1 if git-describe doesn't work

--- a/configure.ac
+++ b/configure.ac
@@ -1,4 +1,4 @@
-AC_INIT([skel], m4_esyscmd_s([git describe --dirty]), [matan.nassau@gmail.com])
+AC_INIT([skel], m4_esyscmd_s([git describe --dirty 2>/dev/null || echo v0.1]), [matan.nassau@gmail.com])
 AM_INIT_AUTOMAKE([foreign -Wall -Werror])
 AC_PROG_CXX
 AC_PROG_RANLIB
